2010-07-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #15055: Scheduler: Date picker is broken in add/edit form
	* Fixed bug #14988: TYPO3.Backend is assigned twice by ExtDirect and the viewport (Thanks to Stefan Galinski)
	* Fixed bug #15045: Trailing newlines after php closing tag. (Thanks to Nikolas Hagelstein)

2010-07-08  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14719: Wrong code comment (QUICKSTART/FIRST_INSTALL) (thanks to Steffen Gebert)
	* Fixed bug #14813: Install Tool uses deprecated function t3lib_stdGraphic->imagecreate() (thanks to Stefan Galinski)

2010-07-08  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #15049: "Fileextension" is not an English word

2010-07-07  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14968: Add unit tests for t3lib_div::validIP (Thanks to Nikolas Hagelstein and Felix Kopp)

2010-07-07  Susanne Moog  <typo3@susanne-moog.de>

	* Follow-up to #14845: No preview images with referenced files anymore (thanks to Stefan Galinski)

2010-07-06  Susanne Moog  <typo3@susanne-moog.de>

	* Fixed bug #14845: Bug: Filelist module reports "type" of files also for directories  (thanks to Caspar Stuebs and Andy Grunwald)

2010-07-06  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #14984: Add example unit tests from T3DD10 unit testing workshop (Thanks to Oliver Klee)
	* Fixed bug #14885: No access to taskcenter (tasks) for non-admins (Thanks to Jigal van Hemert)
	* Fixed bug #14991: Missing fields in "showRecordFieldList" at the TCA for fe_users (Thanks to Frank Nägler)
	* Fixed bug #14972: Add unit tests for t3lib_div::removeArrayEntryByValue (Thanks to Thorben Kapp)
	* Fixed bug #14967: [Caching framework] fileBackend testcase removes files in /sbin
	* Fixed bug #14977: Add php cache frontend to t3lib/config_default.php (Thanks to Felix Oertel)

2010-07-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #14960: [t3skin] apps-pagetree.css is redundant (Thanks to Felix Kopp)