@@ -1,5 +1,6 @@
 2010-07-09  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #15061: Remove XCLASS from t3lib_utility_Http (Thanks to Georg Ringer)
 	* Fixed bug #15055: Scheduler: Date picker is broken in add/edit form
 	* Fixed bug #14988: TYPO3.Backend is assigned twice by ExtDirect and the viewport (Thanks to Stefan Galinski)
 	* Fixed bug #15045: Trailing newlines after php closing tag. (Thanks to Nikolas Hagelstein)
